--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -20,12 +20,12 @@ jobs:
       - run:
           name: Build Docker image
           command: |
-            docker build -t htmlApp -t dakshkotian/htmlApp:latest .
+            docker build -t circle -t dakshkotian/circle:latest .
             echo $DOCKER_PASSWORD | docker login -u dakshkotian --password-stdin
-            docker push dakshkotian/htmlApp:latest
+            docker push dakshkotian/circle:latest
 
 workflows:
-  version: 2
+ 
   build_test:
     jobs:
       - build_test
