--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -9,6 +9,16 @@ jobs:
       - run:
           name: Install npm dependencies
           command: npm install --save
+    # Add a conditional step for notifications
+      - run:
+          name: Notify Discord
+          command: |
+            if [ "${CIRCLE_JOB}" == "build_test" ] && [ "${CIRCLE_BRANCH}" == "master" ] && [ "${CIRCLE_WORKFLOW_JOB_TYPE}" == "main" ]; then
+              curl --header "Content-Type: application/json" \
+              --request POST \
+              --data "{\"cards\":[{\"header\":{\"title\":\"${CIRCLE_JOB} successful.\",\"subtitle\":\"${CIRCLE_PROJECT_REPONAME}-${CIRCLE_BRANCH}\",\"imageUrl\":\"https://png.pngtree.com/svg/20170510/success_404253.png\",\"imageStyle\":\"IMAGE\"},\"sections\":[{\"widgets\":[{\"keyValue\":{\"topLabel\":\"${CIRCLE_TAG}\",\"content\":\"Credits - ${CIRCLE_USERNAME}\"}}]},{\"widgets\":[{\"buttons\":[{\"textButton\":{\"text\":\"DETAILS\",\"onClick\":{\"openLink\":{\"url\":\"${CIRCLE_BUILD_URL}\"}}}}]}]}]}]}" \
+              "$Docker"
+            fi
 
   build_docker_image:
     docker:
@@ -23,18 +33,12 @@ jobs:
             docker build -t circle -t dakshkotian/circle:latest .
             echo $DOCKER_PASSWORD | docker login -u dakshkotian --password-stdin
             docker push dakshkotian/circle:latest
-      
-      -when: on_success
-        command: |
-          curl --header "Content-Type: application/json" \
-          --request POST \
-          --data "{\"cards\":[{\"header\":{\"title\":\"${CIRCLE_JOB} successful.\",\"subtitle\":\"${CIRCLE_PROJECT_REPONAME}-${CIRCLE_BRANCH}\",\"imageUrl\":\"https://png.pngtree.com/svg/20170510/success_404253.png\",\"imageStyle\":\"IMAGE\"},\"sections\":[{\"widgets\":[{\"keyValue\":{\"topLabel\":\"${CIRCLE_TAG}\",\"content\":\"Credits - ${CIRCLE_USERNAME}\"}}]},{\"widgets\":[{\"buttons\":[{\"textButton\":{\"text\":\"DETAILS\",\"onClick\":{\"openLink\":{\"url\":\"${CIRCLE_BUILD_URL}\"}}}}]}]}]}]}" \
-          "$Docker"
+
 workflows:
   version: 2
   build_test:
     jobs:
-      - build_test:
+      - build_test
       - build_docker_image:
           requires:
             - build_test
