--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -12,18 +12,10 @@ jobs:
       - run:
           name: Notify Discord
           command: |
-            if [ "${CIRCLE_JOB}" == "build_test" ] && [ "${CIRCLE_BRANCH}" == "master" ] && [ "${CIRCLE_WORKFLOW_JOB_TYPE}" == "main" ]; then
-              # Escape double quotes within the JSON data
-              escaped_data=$(echo "{\"content\":\"Successful build!\",\"embeds\":[{\"title\":\"${CIRCLE_JOB} successful.\",\"description\":\"${CIRCLE_PROJECT_REPONAME}-${CIRCLE_BRANCH}\",\"thumbnail\":{\"url\":\"https://png.pngtree.com/svg/20170510/success_404253.png\"},\"fields\":[{\"name\":\"Tag\",\"value\":\"${CIRCLE_TAG}\"},{\"name\":\"Credits\",\"value\":\"${CIRCLE_USERNAME}\"}],\"footer\":{\"text\":\"Details\",\"icon_url\":\"https://png.pngtree.com/svg/20170510/success_404253.png\"}}]}" | sed 's/"/\\"/g')
-              
-              # Use the escaped data in the curl command
-              curl --header "Content-Type: application/json" \
-                --request POST \
-                --data "$escaped_data" \
-                "https://discord.com/api/webhooks/1182572300701270036/DHrYXuD2YORNlD_tFRjbP55kQmbtGGc0S3rBVScSRx8b38qhMY3UI6VxzqRPgyIzXNR8"
-            else
-              echo "Not sending notification. Condition not met."
-            fi
+            echo "Sending Discord notification..."
+                  curl -X POST -H "Content-Type: application/json" \
+                  -d '{"content": "Successful build!"}' \
+                  https://discord.com/api/webhooks/1182572300701270036/DHrYXuD2YORNlD_tFRjbP55kQmbtGGc0S3rBVScSRx8b38qhMY3UI6VxzqRPgyIzXNR8
 
   build_docker_image:
     docker:
