--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -4,6 +4,7 @@ on:
   push:
     branches:
       - main
+
 jobs:
   build:
     name: Build
@@ -13,12 +14,26 @@ jobs:
       - uses: actions/checkout@v2
         with:
           fetch-depth: 0  # Shallow clones should be disabled for a better relevancy of analysis
+
       - uses: sonarsource/sonarqube-scan-action@master
         env:
           SONAR_TOKEN: ${{ secrets.SONAR_TOKEN }}
           SONAR_HOST_URL: ${{ secrets.SONAR_HOST_URL }}
-      # If you wish to fail your job when the Quality Gate is red, uncomment the
-      # following lines. This would typically be used to fail a deployment.
-      - uses: sonarsource/sonarqube-quality-gate-action@master
-        timeout-minutes: 5
+
+      # Custom step to check the number of high impact issues
+      - name: Check SonarQube Quality Gate
+        run: |
+          # Get the JSON response from SonarQube API
+          response=$(curl -sS -u "${{ secrets.SONAR_TOKEN }}": "${{ secrets.SONAR_HOST_URL }}/api/qualitygates/project_status?projectKey=your_project_key")
+          # Extract the number of high impact issues
+          high_impact=$(echo "$response" | jq -r '.projectStatus.conditions[] | select(.metricKey == "new_security_rating" and .status == "ERROR") | .actualValue')
+          # Check if the number of high impact issues is greater than 4
+          if [ "$high_impact" -gt 4 ]; then
+            echo "Number of high impact issues is greater than 4. Failing the job."
+            exit 1
+          else
+            echo "Number of high impact issues is within acceptable limits."
+          fi
+
+
       
