--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -9,35 +9,33 @@ on:
       - dev1
 
 jobs:
-  build:
-    name: Build
+  npm_install_main:
+    name: NPM Install (Main)
+    if: github.ref == 'refs/heads/main'
     runs-on: ubuntu-latest
-    permissions: read-all
     steps:
-      - uses: actions/checkout@v2
-        with:
-          fetch-depth: 0  # Shallow clones should be disabled for a better relevancy of analysis
+      - name: Checkout code
+        uses: actions/checkout@v2
 
-      # Run npm install
-      - name: Install Dependencies
+      - name: Install dependencies
         run: npm install
-        # Comment out the other steps
-        # - uses: sonarsource/sonarqube-scan-action@master
-        #   env:
-        #     SONAR_TOKEN: ${{ secrets.SONAR_TOKEN }}
-        #     SONAR_HOST_URL: ${{ secrets.SONAR_HOST_URL }}
-        #
-        # - name: Check SonarQube Quality Gate
-        #   run: |
-        #     response=$(curl -sS -u "${{ secrets.SONAR_TOKEN }}": "${{ secrets.SONAR_HOST_URL }}/api/qualitygates/project_status?projectKey=your_project_key")
-        #     high_impact=$(echo "$response" | jq -r '.projectStatus.conditions[] | select(.metricKey == "new_security_rating" and .status == "ERROR") | .actualValue')
-        #     if [ "$high_impact" -gt 4 ]; then
-        #       echo "Number of high impact issues is greater than 4. Failing the job."
-        #       exit 1
-        #     else
-        #       echo "Number of high impact issues is within acceptable limits."
-        #     fi
 
+      - name: Log message
+        run: echo "NPM Install completed for main branch"
+
+  npm_install_dev1:
+    name: NPM Install (Dev1)
+    if: github.ref == 'refs/heads/dev1'
+    runs-on: ubuntu-latest
+    steps:
+      - name: Checkout code
+        uses: actions/checkout@v2
+
+      - name: Install dependencies
+        run: npm install
+
+      - name: Log message
+        run: echo "NPM Install completed for dev1 branch"
 
 
 # name: Build
