--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -7,20 +7,37 @@ on:
   # workflow_dispatch:
   #   branches:
       - dev1
+
+
 jobs:
   example-job:
     runs-on: ubuntu-latest
     steps:
-      - name: Get variables from secret
+      - name: Get encoded variables from secret
         run: |
-          # Parse JSON string stored in GitHub Secret
-          VARIABLES=$(echo "${{ secrets.MY_SECRET }}" | jq -r .)
+          VARIABLES=$(echo "${{ secrets.MY_SECRET }}" | jq -r '.')
+          VARIABLE1=$(echo "$VARIABLES" | jq -r '.variable1')
+          VARIABLE2=$(echo "$VARIABLES" | jq -r '.variable2')
+          VARIABLE3=$(echo "$VARIABLES" | jq -r '.variable3')
+        env:
+          VARIABLE1: $VARIABLE1
+          VARIABLE2: $VARIABLE2
+          VARIABLE3: $VARIABLE3
 
-          # Extract specific variable
-          VARIABLE_VALUE=$(echo "$VARIABLES" | jq -r '.variable1')
+# jobs:
+#   example-job:
+#     runs-on: ubuntu-latest
+#     steps:
+#       - name: Get variables from secret
+#         run: |
+#           # Parse JSON string stored in GitHub Secret
+#           VARIABLES=$(echo "${{ secrets.MY_SECRET }}" | jq -r .)
 
-          # Set the extracted variable as an environment variable
-          echo "Variable 1 value: $VARIABLE_VALUE"
+#           # Extract specific variable
+#           VARIABLE_VALUE=$(echo "$VARIABLES" | jq -r '.variable1')
+
+#           # Set the extracted variable as an environment variable
+#           echo "Variable 1 value: $VARIABLE_VALUE"
 
 # jobs:
 #   npm_install_main:
