--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -20,9 +20,10 @@ jobs:
           VARIABLE2=$(echo "$VARIABLES" | jq -r '.variable2')
           VARIABLE3=$(echo "$VARIABLES" | jq -r '.variable3')
         env:
-          VARIABLE1: $VARIABLE1
-          VARIABLE2: $VARIABLE2
-          VARIABLE3: $VARIABLE3
+          VARIABLE1: ${{ env.VARIABLE1 }}
+          VARIABLE2: ${{ env.VARIABLE2 }}
+          VARIABLE3: ${{ env.VARIABLE3 }}
+
 
 # jobs:
 #   example-job:
