--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -13,27 +13,22 @@ on:
 
      
 jobs:
-  example-job:
+  example_job:
     runs-on: ubuntu-latest
     steps:
-      - name: Get variables from secret
-        run: |
-          # Parse JSON string stored in GitHub Secret
-          VARIABLES=$(echo "${{ secrets.xMY_SECRET }}" | jq -r .)
-
-          # Extract specific variable
-          VARIABLE_VALUE=$(echo "$VARIABLES" | jq -r '.variable1')
-
-          # Check if variable1's value is equal to value1
-          if [ "$VARIABLE_VALUE" = "value1" ]; then
-            CONDITION_RESULT="true"
-          else
-            CONDITION_RESULT="false"
-          fi
-
-          # Print the result of the condition
-          echo "Variable 1 value: $VARIABLE_VALUE"
-          echo "Condition result: $CONDITION_RESULT"
+    - name: Checkout repository
+      uses: actions/checkout@v2
+    - name: Set up environment variables
+      env:
+        MULTI_VARS: ${{ secrets.MULTI_VARS }}
+      run: |
+        echo "$MULTI_VARS" > multi_vars.json
+        VAR1=$(jq -r '.VAR1' multi_vars.json)
+        VAR2=$(jq -r '.VAR2' multi_vars.json)
+        VAR3=$(jq -r '.VAR3' multi_vars.json)
+        echo "VAR1=$VAR1"
+        echo "VAR2=$VAR2"
+        echo "VAR3=$VAR3"
 
 
 
