--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -57,7 +57,7 @@ jobs:
 #     runs-on: ubuntu-latest
 #     steps:
 #       - name: Checkout code
-#         uses: actions/checkout@v2d
+#         uses: actions/checkout@v2dd
 
 #       - name: Install dependencies
 #         run: npm install
